force-app/main/default/objects/SCC_Case_Reporting__c/SCC_Case_Reporting__c.object-meta.xml
<CustomObject>
    <label>Case Reporting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nomor Tiket</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>