force-app/main/default/objects/SCC_Case_Reporting__c/fields/SCC_Date_Time_Perubahan_Owner__c.field-meta.xml
<CustomField>
    <fullName>SCC_Date_Time_Perubahan_Owner__c</fullName>
    <label>Date/Time Perubahan Owner</label>
    <type>DateTime</type>
</CustomField>