force-app/main/default/objects/SCC_Case_Reporting__c/fields/SCC_Jenis_Eskalasi_Perubahan__c.field-meta.xml
<CustomField>
    <fullName>SCC_Jenis_Eskalasi_Perubahan__c</fullName>
    <label>Jenis Eskalasi/Perubahan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automasi</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>