force-app/main/default/objects/SCC_Case_Reporting__c/fields/SCC_Owner_Baru__c.field-meta.xml
<CustomField>
    <fullName>SCC_Owner_Baru__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Baru</label>
    <length>255</length>
    <type>Text</type>
</CustomField>