force-app/main/default/objects/SCC_Case_Reporting__c/fields/SCC_Tiket__c.field-meta.xml
<CustomField>
    <fullName>SCC_Tiket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tiket</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases Reporting</relationshipLabel>
    <relationshipName>Cases_Reporting</relationshipName>
    <type>Lookup</type>
</CustomField>